--- a/nextrated/index.html
+++ b/nextrated/index.html
@@ -28,7 +28,45 @@
         <!-- Page content -->
         <div class="main">
             <div class="request-class">
-                
+                <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-1 col-form-label">Type:</label>
+                        <div class="col-sm-4">
+                            <select class="custom-select">
+                                    <option selected>Select a type</option>
+                                    <option value="1">Recharge Cards</option>
+                                    <option value="2">Prepaid</option>
+                                    <option value="3">Transfer</option>
+                            </select>
+                        </div>
+                </div>
+                 <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-1 col-form-label">Amount:</label>
+                        <div class="col-sm-4">
+                            <select class="custom-select">
+                                    <option selected>Amount</option>
+                                    <option value="1">N100</option>
+                                    <option value="2">N200</option>
+                                    <option value="3">N500</option>
+                                    <option value="4">N750</option>
+                                    <option value="5">N1000</option>
+                                    <option value="6">N1500</option>
+                            </select>
+                        </div>
+                </div>
+                <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-1 col-form-label">Quantity:</label>
+                        <div class="col-sm-4">
+                            <select class="custom-select">
+                                    <option selected>Quantity</option>
+                                    <option value="1">1</option>
+                                    <option value="2">3</option>
+                                    <option value="3">5</option>
+                                    <option value="4">10</option>
+                                    <option value="5">20</option>
+                                    <option value="6">50</option>
+                            </select>
+                        </div>
+                </div>
             </div>
             <div class="data-table">
                     <table id="tableId" class="table table-striped table-bordered container" style="width:100%">
