--- a/nextrated/index.html
+++ b/nextrated/index.html
@@ -27,10 +27,10 @@
         
         <!-- Page content -->
         <div class="main">
-            <div class="request-class">
+            <div class="request-form">
                 <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-1 col-form-label">Type:</label>
-                        <div class="col-sm-4">
+                        <label for="colFormLabel" class="col-sm-2 col-form-label">Type:</label>
+                        <div class="col-sm-6">
                             <select class="custom-select">
                                     <option selected>Select a type</option>
                                     <option value="1">Recharge Cards</option>
@@ -40,8 +40,8 @@
                         </div>
                 </div>
                  <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-1 col-form-label">Amount:</label>
-                        <div class="col-sm-4">
+                        <label for="colFormLabel" class="col-sm-2 col-form-label">Amount:</label>
+                        <div class="col-sm-6">
                             <select class="custom-select">
                                     <option selected>Amount</option>
                                     <option value="1">N100</option>
@@ -54,8 +54,8 @@
                         </div>
                 </div>
                 <div class="form-group row">
-                        <label for="colFormLabel" class="col-sm-1 col-form-label">Quantity:</label>
-                        <div class="col-sm-4">
+                        <label for="colFormLabel" class="col-sm-2 col-form-label">Quantity:</label>
+                        <div class="col-sm-6">
                             <select class="custom-select">
                                     <option selected>Quantity</option>
                                     <option value="1">1</option>
@@ -67,15 +67,19 @@
                             </select>
                         </div>
                 </div>
+                <div class="form-group row">
+                <label for="colFormLabel" class="col-sm-4 col-form-label"></label>
+                <button type="button" class="btn btn-primary col-sm-2">Generate Pin</button>
+                </div>
             </div>
             <div class="data-table">
                     <table id="tableId" class="table table-striped table-bordered container" style="width:100%">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Position</th>
-                                    <th>Office</th>
-                                    <th>Age</th>
+                                    <th id="typeId">Type</th>
+                                    <th id="amountId">Amount</th>
+                                    <th id="quantityId">Quantity</th>
+                                    <th id="pinId">Pin</th>
                                     <th>Start date</th>
                                     <th>Salary</th>
                                 </tr>
