--- a/nextrated/index.html
+++ b/nextrated/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
     <link rel="stylesheet" href=" https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Scratch</title>
 </head>
@@ -31,39 +32,39 @@
                 <div class="form-group row">
                         <label for="colFormLabel" class="col-sm-2 col-form-label">Type:</label>
                         <div class="col-sm-6">
-                            <select class="custom-select">
+                            <select class="custom-select" id="cards">
                                     <option selected>Select a type</option>
-                                    <option value="1">Recharge Cards</option>
-                                    <option value="2">Prepaid</option>
-                                    <option value="3">Transfer</option>
+                                    <option value="Recharge Cards">Recharge Cards</option>
+                                    <option value="Prepaid">Prepaid</option>
+                                    <option value="Transfer">Transfer</option>
                             </select>
                         </div>
                 </div>
                  <div class="form-group row">
                         <label for="colFormLabel" class="col-sm-2 col-form-label">Amount:</label>
                         <div class="col-sm-6">
-                            <select class="custom-select">
+                            <select class="custom-select" id="amounts">
                                     <option selected>Amount</option>
-                                    <option value="1">N100</option>
-                                    <option value="2">N200</option>
-                                    <option value="3">N500</option>
-                                    <option value="4">N750</option>
-                                    <option value="5">N1000</option>
-                                    <option value="6">N1500</option>
+                                    <option value="N100">N100</option>
+                                    <option value="N200">N200</option>
+                                    <option value="N500">N500</option>
+                                    <option value="N750">N750</option>
+                                    <option value="N1000">N1000</option>
+                                    <option value="N1500">N1500</option>
                             </select>
                         </div>
                 </div>
                 <div class="form-group row">
                         <label for="colFormLabel" class="col-sm-2 col-form-label">Quantity:</label>
                         <div class="col-sm-6">
-                            <select class="custom-select">
+                            <select class="custom-select" id="quantity">
                                     <option selected>Quantity</option>
                                     <option value="1">1</option>
                                     <option value="2">3</option>
-                                    <option value="3">5</option>
-                                    <option value="4">10</option>
-                                    <option value="5">20</option>
-                                    <option value="6">50</option>
+                                    <option value="5">5</option>
+                                    <option value="10">10</option>
+                                    <option value="20">20</option>
+                                    <option value="50">50</option>
                             </select>
                         </div>
                 </div>
@@ -80,8 +81,8 @@
                                     <th id="amountId">Amount</th>
                                     <th id="quantityId">Quantity</th>
                                     <th id="pinId">Pin</th>
-                                    <th>Start date</th>
-                                    <th>Salary</th>
+                                    <th>Date</th>
+                                    <th>Update</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,39 +94,16 @@
                                     <td>2010/07/14</td>
                                     <td>$86,500</td>
                                 </tr>
-                                <tr>
-                                    <td>Shad Decker</td>
-                                    <td>Regional Director</td>
-                                    <td>Edinburgh</td>
-                                    <td>51</td>
-                                    <td>2008/11/13</td>
-                                    <td>$183,000</td>
-                                </tr>
-                                <tr>
-                                    <td>Michael Bruce</td>
-                                    <td>Javascript Developer</td>
-                                    <td>Singapore</td>
-                                    <td>29</td>
-                                    <td>2011/06/27</td>
-                                    <td>$183,000</td>
-                                </tr>
-                                <tr>
-                                    <td>Donna Snider</td>
-                                    <td>Customer Support</td>
-                                    <td>New York</td>
-                                    <td>27</td>
-                                    <td>2011/01/25</td>
-                                    <td>$112,000</td>
-                                </tr>
+                
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Position</th>
-                                    <th>Office</th>
-                                    <th>Age</th>
-                                    <th>Start date</th>
-                                    <th>Salary</th>
+                                    <th>Type</th>
+                                    <th>Amount</th>
+                                    <th>Quantity</th>
+                                    <th>Pin</th>
+                                    <th>Date</th>
+                                    <th>Update</th>
                                 </tr>
                             </tfoot>
                     </table>
