--- a/nextrated/index.html
+++ b/nextrated/index.html
@@ -20,8 +20,8 @@
     </div>
             <!-- Side navigation -->
         <div class="sidenav">
-           <div class="bar"><a href="#">About</a></div> 
-           <div class="bar"><a href="#">Services</a></div>
+           <div class="bar"><a href="about.html">About</a></div> 
+           <div class="bar"><a href="#">Settings</a></div>
            <div class="bar"><a href="#">Clients</a></div> 
            <div class="bar"><a href="#">Contact</a></div>  
         </div>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="form-group row">
                 <label for="colFormLabel" class="col-sm-4 col-form-label"></label>
-                <button type="button" class="btn btn-primary col-sm-2">Generate Pin</button>
+                <button type="button" class="btn btn-primary col-sm-2 genBut">Generate Pin</button>
                 </div>
             </div>
             <div class="data-table">
@@ -98,7 +98,8 @@
                             </tfoot>
                     </table>
             </div>
-        </div> 
+        </div>
+        </div>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
