--- a/nextrated/index.html
+++ b/nextrated/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href=" https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Scratch</title>
@@ -21,7 +21,7 @@
             <!-- Side navigation -->
         <div class="sidenav">
            <div class="bar"><a href="about.html">About</a></div> 
-           <div class="bar"><a href="#">Settings</a></div>
+           <div class="bar"><a href="settings.html">Settings</a></div>
            <div class="bar"><a href="#">Clients</a></div> 
            <div class="bar"><a href="#">Contact</a></div>  
         </div>
@@ -33,10 +33,10 @@
                         <label for="colFormLabel" class="col-sm-2 col-form-label">Type:</label>
                         <div class="col-sm-6">
                             <select class="custom-select" id="cards">
-                                    <option selected>Select a type</option>
+                                    <option selected>Vouchers</option>
                                     <option value="Recharge Cards">Recharge Cards</option>
-                                    <option value="Prepaid">Prepaid</option>
-                                    <option value="Transfer">Transfer</option>
+                                    <option value="E-Top Up">E-Top Up</option>
+                                    <option value="Transfer Code">Transfer Code</option>
                             </select>
                         </div>
                 </div>
@@ -58,9 +58,9 @@
                         <label for="colFormLabel" class="col-sm-2 col-form-label">Quantity:</label>
                         <div class="col-sm-6">
                             <select class="custom-select" id="quantity">
-                                    <option selected>Quantity</option>
-                                    <option value="1">1</option>
-                                    <option value="2">3</option>
+                                    <option selected>1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
                                     <option value="5">5</option>
                                     <option value="10">10</option>
                                     <option value="20">20</option>
@@ -100,6 +100,32 @@
             </div>
         </div>
         </div>
+        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                Launch demo modal
+              </button> -->
+              
+              <!-- Modal -->
+              <div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Card Info</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <ul class="info"></ul>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
